--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.0",
     "convex": "^1.10.0",
     "date-fns": "^3.4.0",
+    "embla-carousel-react": "^8.0.0",
     "lucide-react": "^0.344.0",
     "next": "14.1.2",
     "react": "^18",
