--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "@tanstack/react-table": "^8.13.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "convex": "^1.10.0",
+    "convex": "^1.11.3",
     "date-fns": "^3.4.0",
     "embla-carousel-react": "^8.0.0",
     "lucide-react": "^0.344.0",
-    "next": "14.1.2",
+    "next": "^14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
